- Issue #2 fixed -> Two products next to each other on mobile

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ p{
 .col-4{
     flex-basis: 25%;
     padding: 10px;
-    min-width: 200px;
+    min-width: 150px;
     margin-bottom: 50px;
     transition: transform 0.5s;
 }
